Set h1 font size to avoid title wrapping onto 2 lines in some browsers

--- a/Templates/fastqc.css
+++ b/Templates/fastqc.css
@@ -180,6 +180,10 @@ a:hover {
 }
 
 /* CONTENT STYLING */
+h1 {
+  font-size: 1.8rem;
+}
+
 h2 {
   padding-bottom: 0.5rem;
   margin-bottom: 1rem;
